Added links to Events page to show events by Category

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -23,6 +23,10 @@
         <h2><strong>Upcoming Events</strong> </h2>
 
         <p class="lead">You can find out about all our upcoming events right here! The only place you'll need to go to get information, volunteer, or buy tickets or make donations. </p>
+          
+
+        <a href="/events/new" button type="button" class="btn btn-primary">Add Event</button> </a>
+      
 
            
 
