--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -21,11 +21,11 @@
       </header>
 
       <section class="container">
-        <h2><strong>Event Info</strong> </h2>
+        <h2><strong>Event Details</strong> </h2>
+        <button type="button" class="btn btn-primary">Update Event</button>
+        <a href="/events/:id" button type="button" class="btn btn-primary">Delete Event</button>
+         <a href="/events/:id/" button type="button" class="btn btn-primary">Update Event</button> </a>
 
-        <p class="lead">Here are all the details about this event:</p>
-
-           
 
         <div class="divider"><!-- divider -->
           <i class="fa fa-star"></i>
@@ -34,8 +34,6 @@
          
 
 <div>
-
-<h1> Event info </h1>
 <h2><%= @event.name %></h2>
 <h3>Categories<h3>
 <ul>
@@ -48,6 +46,5 @@
 <p> Date and Time: <%= @event.datetime %></p>
 <p> Price Adult: <%= @event.price_adult %></p>
 <p> Price Child: <%= @event.price_child %></p>
-<div>
- <% link_to "Destroy this event", "/events/#{@event.id}", method: :delete %>
- </div>
+
+ 
