--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -26,6 +26,7 @@
           
 
         <a href="/events/new" button type="button" class="btn btn-primary">Add Event</button> </a>
+        <a href="/tasks" button type="button" class="btn btn-primary">See Tasks</button> </a>
       
 
            
@@ -39,10 +40,19 @@
 <% @events.each do |event| %>
   <h2><a href="/events/<%= event.id %>"><%= event.name %></a></h2>
   <h3> Location: <%= event.location %></h3>
-  <p> Date Time: <%= event.datetime %></p>
+  <p> Start Date: <%= event.start_date %></p>
+  <p> End Date: <%= event.end_date %></p>
+  <p> Start Time: <%= event.start_time %></p>
+  <p> End Time: <%= event.end_time %></p>
   <p> Adult Price: <%= event.price_adult %></p>
   <p> Child Price: <%= event.price_child %></p>
+  <p> Event Status: <%= event.status %></p>
+  <p> Description: <%= event.description %></p>
+  
+
   <% end %>
+
+  
 
  
 
