--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -34,7 +34,7 @@
         <div class="divider"><!-- divider -->
           <i class="fa fa-star"></i>
         </div>
-
+ 
 
 
 <% @events.each do |event| %>
@@ -48,9 +48,9 @@
   <p> Child Price: <%= event.price_child %></p>
   <p> Event Status: <%= event.status %></p>
   <p> Description: <%= event.description %></p>
-  
-
   <% end %>
+
+  <a href="/tasks"> See what needs doing here</a> 
 
   
 
