--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -14,17 +14,17 @@
           <h1>Events</h1>
 
           <ul class="breadcrumb">
-            <li><a href="/events/new">Add Event</a></li>
-            <li><a href="/events">Events</a></li>
+            <li><a href="/tasks/new">Add new task</a></li>
+            <li><a href="/tasks">All open tasks</a></li>
             <li class="active">This event</li>
           </ul>
         </div>
       </header>
 
       <section class="container">
-        <h2><strong>New Event</strong> </h2>
+        <h2><strong>New Task</strong> </h2>
 
-        <p class="lead">Add a New Event</p>
+        <p class="lead">Add a New Task</p>
 
            
 
@@ -40,24 +40,32 @@
           <div class="col-md-9">
 
 
-<form action="/events" method="post">
-<%= form_tag '/events', method: :post do %>
-  <div class="form-group">
-  <%= label_tag :name %>
-  <%= text_field_tag :name, "", class: 'form-control' %>
-  </div>
-  <div class="form-group">
-  <%= label_tag :category %>
-  <select class="form-control" name="category_id">
-    <% Category.all.each do |category| %>
-      <option value="<%= category.id %>"><%= category.name %></option>
+<form action="/tasks" method="post">
+<%= form_tag '/tasks', method: :post do %>
+
+   <div class="form-group">
+  <%= label_tag :description %>
+  <select class="form-control" name="task_id">
+    <% Task.all.each do |task| %>
+      <option value="<%= task.id %>"><%= task.description %></option>
     <% end %>
   </select>
   </div>
   <div class="form-group">
-    <%= label_tag :location %>
-     <%= text_field_tag :location, "", class: 'form-control' %>
+  <%= label_tag :event %>
+  <select class="form-control" name="event_id">
+    <% Event.all.each do |event| %>
+      <option value="<%= event.id %>"><%= event.name %></option>
+    <% end %>
+  </select>
   </div>
+  <div class="form-group">
+  <%= label_tag :location %>
+  <select class="form-control" name="location_id">
+    <% Location.all.each do |location| %>
+      <option value="<%= location.id %>"><%= location.name %></option>
+    <% end %>
+  </select>
   <div class="form-group">
     <%= label_tag :start_date %> 
     <%= text_field_tag :start_date, "", class: "form-control" %>
@@ -73,23 +81,11 @@
     <%= text_field_tag :end_time, "", class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= label_tag :price_adult %>
-    <%= text_field_tag :price_adult, "", class: "form-control" %>
-  </div>
-  <div class="form-group">
-    <%= label_tag :price_child %>
-    <%= text_field_tag :price_child, "", class: "form-control" %>
-  </div>
-  <div class="form-group">
     <%= label_tag :status %>
     <%= text_field_tag :status, "", class: "form-control" %>
   </div>
-  <div class="form-group">
-    <%= label_tag :description %>
-    <%= text_field_tag :description, "", class: "form-control" %>
-  </div>
    
-  <%= submit_tag "Add event", class: "btn btn-primary" %>
+  <%= submit_tag "Add task", class: "btn btn-primary" %>
 
   <% end %>
 
@@ -97,7 +93,3 @@
 
     
     <!-- /WRAPPER -->
-
-
-
-     
