added models, boards and loctions pages, changed table columns

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -163,9 +163,9 @@
                     <ul class="dropdown-menu">
                       <li><a href="/about">About Us</a></li>
                       <li><a href="/contact">Contact Us</a></li>
-                      <li><a href="#">Join Us for Worship?</a></li>
+                      <li><a href="/boards">Boards, Committees, Ministries</a></li>
                       <li><a href="/staff">Staff</a></li>
-                      <li><a href="revolution-official-1.html">Visitation/Prayer Requests</a></li>
+                      <li><a href="/locations">Locations of church Events</a></li>
                     </ul>
                   </li>
                   <li><a href="/events" data-toggle="tooltip" data-placement="top" title="" data-original-title="Events"><span class="label label-danger">Events</span></a></li>
