--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -43,6 +43,6 @@
   <p>  </p>
   <p>  Status: <%= task.status %></p>
   <p>  Created by: <%= task.created_by%></p>
-  <p>  Event Owner: <%= task.event_owner %></p>
+  <p>  Event Owner: <%= task %></p>
   <% end %>
   <a href="/tasks/:id/edit"><Volunteer here></a>
