--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -42,4 +42,6 @@
   <p> Phone: <%= user.phone %></p>
   <p> Email: <%= user.email %></p>
   <p> Type: <%= user.role %></p>
+  <p> Type: <%= committee.name %></p>
+
   <% end %>
