--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -55,8 +55,19 @@
   </select>
   </div>
   <div class="form-group">
-    <%= label_tag :location %>
-     <%= text_field_tag :location, "", class: 'form-control' %>
+  <%= label_tag :location %>
+  <select class="form-control" name="location_id">
+    <% Location.all.each do |location| %>
+      <option value="<%= location.id %>"><%= location.name %></option>
+    <% end %>
+  </select>
+  <div class="form-group">
+  <%= label_tag :event_owner %>
+  <select class="form-control" name="committee_ministry_id">
+    <% CommitteeMinistry.all.each do |committee_ministry| %>
+      <option value="<%= committee_ministry.id %>"><%= committee_ministry.name %></option>
+    <% end %>
+  </select>
   </div>
   <div class="form-group">
     <%= label_tag :start_date %> 
