--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -42,15 +42,12 @@
 
 <form action="/tasks" method="post">
 <%= form_tag '/tasks', method: :post do %>
-
-   <div class="form-group">
-  <%= label_tag :description %>
-  <select class="form-control" name="task_id">
-    <% Task.all.each do |task| %>
-      <option value="<%= task.id %>"><%= task.description %></option>
-    <% end %>
-  </select>
+  
+  <div class="form-group">
+    <%= label_tag :description %> 
+    <%= text_field_tag :description, "", class: "form-control" %>
   </div>
+
   <div class="form-group">
   <%= label_tag :event %>
   <select class="form-control" name="event_id">
