--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -39,7 +39,6 @@
 
           <div class="col-md-9">
 
-
 <form action="/events" method="post">
 <%= form_tag '/events', method: :post do %>
   <div class="form-group">
@@ -69,31 +68,13 @@
     <% end %>
   </select>
   </div>
-  <div class="form-group">
-    <%= label_tag :start_date %> 
-    <%= text_field_tag :start_date, "", class: "form-control" %>
-  </div>
-  <div class="form-group">
-    <%= label_tag :end_date %> 
-    <%= text_field_tag :end_date, "", class: "form-control" %>
-  </div><div class="form-group">
+  <div class="form-group" type="datetime-local">
     <%= label_tag :start_time %> 
     <%= text_field_tag :start_time, "", class: "form-control" %>
-  </div><div class="form-group">
+  </div>
+  <div class="form-group">
     <%= label_tag :end_time %> 
     <%= text_field_tag :end_time, "", class: "form-control" %>
-  </div>
-  <div class="form-group">
-    <%= label_tag :price_adult %>
-    <%= text_field_tag :price_adult, "", class: "form-control" %>
-  </div>
-  <div class="form-group">
-    <%= label_tag :price_child %>
-    <%= text_field_tag :price_child, "", class: "form-control" %>
-  </div>
-  <div class="form-group">
-    <%= label_tag :status %>
-    <%= text_field_tag :status, "", class: "form-control" %>
   </div>
   <div class="form-group">
     <%= label_tag :description %>
